# cpc

./: .gitignore  .kilocodeignore  ADVANCED_CRM_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATES_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INVOICING_IMPLEMENTATION_SUMMARY.md  LICENSE.md  Makefile  PHASE1_CHANGES_SUMMARY.md  PROTO_REFACTOR_SUMMARY.md  README.md  RELEASE_NOTES.md  REORGANIZATION_SUMMARY.md  SOCIAL_APPS_INTEGRATION_SUMMARY.md  STATISTICAL_IMPLEMENTATION_SUMMARY.md  SUMMARY.md  TASK_COMPLETION_SUMMARY.md  UNIVERSAL_INCOME_IMPLEMENTATION_SUMMARY.md  WALLET_IMPLEMENTATION_SUMMARY.md  WALLET_INTEGRATION_IMPLEMENTATION_SUMMARY.md  combined_project_cpc.txt  forecasting_integration_test_results.md  forecasting_output.md  shared  update_cargo_files.py  verify_auth_implementation.sh  verify_docs.sh  verify_implementation.sh
apps/advanced_crm/: ARCHITECTURE.md  Cargo.toml  README.md
apps/advanced_crm/migrations/: 20240728_sales_reporting_schema.sql
apps/advanced_crm/src/: lib.rs  shtairir_integration.rs
apps/allat/: ARCHITECTURE.md  AUTH_ENHANCEMENTS_SUMMARY.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_INTEGRATION_PLAN.md  AUTH_INTEGRATION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md
apps/allat/docs/: ALLAT_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  advanced_search_implementation_plan.md  allat_architecture.md  architecture.md  community_analytics_implementation_plan.md  cross_posting_implementation_plan.md  database_implementation_summary.md  database_schema.md  database_setup.md  enhancement_architecture.md  notification_integration_implementation_plan.md  service_api_design.md  testing.md
apps/allat/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_search_enhancement.down.sql  0002_search_enhancement.up.sql  README.md
apps/allat/src/: main.rs
apps/allat/tests/: analytics_repo_test.rs  analytics_service_test.rs  auth_service_test.rs  database_migration_test.rs  integration_test.rs  notification_service_test.rs  postgres_repositories_test.rs  search_service_test.rs  service_integration_test.rs  test_helpers.rs  user_repository_test.rs
apps/api_gateway/: Cargo.toml  README.md
apps/api_gateway/src/: lib.rs  visualization.rs
apps/api_integration/: Cargo.toml
apps/api_integration/src/: lib.rs
apps/api_integration/tests/: visualization_integration_tests.rs
apps/api_server/: Cargo.toml  README.md
apps/api_server/migrations/: 202508040033_volunteer_coordination_up.sql  202508040034_volunteer_coordination_down.sql
apps/api_server/src/: lib.rs
apps/art/: ARCHITECTURE.md  Cargo.toml  FLOOD_FILL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md
apps/art/docs/: flood_fill_design.md  multi_backend_rendering.md  rendering_enhancements.md
apps/art/src/: lib.rs  main.rs
apps/art/tests/: integration_test.rs
apps/auth_service/: Cargo.toml
apps/auth_service/proto/: auth.proto
apps/auth_service/src/: main.rs
apps/backend/: .env  .env.example  ARCHITECTURE_DECISIONS.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODULE_MANAGEMENT.md  TASK_SUMMARY.md
apps/backend/docs/: create_project_mutation.md  project_queries.md  project_query.md  update_project_mutation.md
apps/backend/migrations/: 202407241300_create_impact_tables.sql  20250722195308_impact_tables.rs  20250723052009_create_relationships.sql  20250723100000_create_posts_table.sql  20250723100001_create_relationships_table.sql  (+8 more)
apps/bi_analytics/: Cargo.toml
apps/calendar/: ARCHITECTURE.md  ARCHITECTURE_UI.md  Cargo.toml  README.md
apps/cause_management_admin/: Cargo.toml  README.md  index.html
apps/community_connect/: Cargo.toml
apps/community_impact_dashboard/: BUILD_AND_DEPLOY.sh  CHECKLIST.md  Cargo.toml  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_PREPARATION_COMPLETE.md  LAUNCH_PREPARATION_IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md  RUN_ALL_CHECKS.sh  RUN_FINAL_VERIFICATION.sh  SUMMARY.md  Trunk.toml  VERIFY_DEPLOYMENT.sh  VERIFY_IMPLEMENTATION.sh  VERIFY_IMPLEMENTATION_COMPLETE.sh  VERIFY_LAUNCH_PREPARATION.sh  index.html
apps/cpay/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  tauri.conf.json
apps/cpc-node/: Cargo.toml
apps/crm/: Cargo.toml  README.md
apps/dashboard/: Cargo.toml  README.md  Trunk.toml  index.html
apps/daw/: ARCHITECTURE.md  Cargo.toml
apps/document_editor/: ARCHITECTURE.md  Cargo.toml  QUIC_TRANSPORT_IMPLEMENTATION_SUMMARY.md  README.md  REFactor_SUMMARY.md  TASK_COMPLETION_SUMMARY.md
apps/ethical_scanner/: Cargo.toml  README.md  build.rs
apps/feedback_showcase/: Cargo.toml  DESIGN.md  EMBEDDED_VISUALIZATION_CHANGES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  SOCIAL_SHARING_ARCHITECTURE.md  SOCIAL_SHARING_IMPLEMENTATION_SUMMARY.md  SUMMARY.md  VISUALIZATION_IMPLEMENTATION_SUMMARY.md  build.rs  manifest.json  run_showcase.bat  run_showcase.sh  run_web.bat  run_web.sh
apps/finance/: CURRENCY_INTERNATIONALIZATION_COMPLETED.md  CURRENCY_INTERNATIONALIZATION_SUMMARY.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  STATISTICAL_INTEGRATION.md
apps/finance-sheets/: CURRENCY_INTERNATIONALIZATION_COMPLETED.md  CURRENCY_TESTING_SUMMARY.md  Cargo.toml  HAPTICS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MOBILE_HAPTICS_COMPLETED.md  MOBILE_IMPLEMENTATION_SUMMARY.md  MOBILE_OPTIMIZATION_COMPLETED.md  MOBILE_OPTIMIZATION_EXECUTIVE_SUMMARY.md  MOBILE_OPTIMIZATION_PROGRESS.md  README.md  build.sh  index.html  test.sh
apps/finance_admin_dashboard/: Cargo.toml  README.md
apps/financial_impact_admin/: Cargo.toml
apps/gallery/: ARCHITECTURE.md  Cargo.toml
apps/health/: Cargo.toml  MIGRATION_GUIDE.md  README.md
cpc-core/: Cargo.toml
cpc-core/src/: android_lifecycle.rs  lib.rs  thumbnail_ffi.rs
pds/: Cargo.toml
pds/docs/: phase2_file_change_plan.md  phase2_file_transfer_design.md
pds/frontend/: vite.config.js
pds/src/: commands.rs  conflict_resolver.rs  file_utils.rs  file_watcher.rs  main.rs  network_handler.rs
(+3600 files in other folders)
