[package]
name = "cpc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["dynamic", "render", "png", "gltf"] }
rust-libp2p = { version = "0.53", features = ["tcp-tokio", "websocket"] }
merkle-cbt = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = { version = "0.21", optional = true }  # For Android
winit = { version = "0.29", features = ["android-native-activity"] }
image = "0.24"  # For saving PNG thumbnails
anyhow = "1.0"   # For error handling

[build-dependencies]

[features]
default = []
android = ["jni", "winit/android-native-activity"]

# Activate Android features by default when building for Android
[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "0.13", features = ["dynamic", "android", "render", "png", "gltf"] }
rust-libp2p = { version = "0.53", features = ["tcp-tokio", "websocket", "android"] }