[package]
name = "pds"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cpc-lib = { path = "../lib" }
tauri = { version = "1.0", features = [] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"