[package]
name = "cpc-advanced-crm"
version = "0.1.0"
edition = "2021"
authors = ["CPC Cooperative Developers"]
description = "Advanced CRM module for CPC platform"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# CPC core modules
cpc-crm = { path = "../crm" }

# Network and data sharing
cpc-net = { path = "../../shared_packages/network" }

# Audio and PDF generation
rodio = { workspace = true }
pdf = { workspace = true }

# Database
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
async-graphql = { workspace = true }
tokio = { workspace = true }