[package]
name = "allat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
consent_manager = { path = "../../shared_packages/consent_manager" }
wallet = { path = "../../shared_packages/wallet", package = "cpc_wallet" }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
social_integration = { path = "../../shared_packages/social_integration" }
sled = { workspace = true }
sqlx = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
plotters = { workspace = true }
bi_visualization = { path = "../../shared_packages/bi_visualization" }

[dev-dependencies]
tempfile = "3.0"
testcontainers = "0.15"
serial_test = "0.8"