[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CPC packages
volunteer_core = { path = "../../shared_packages/volunteer_core" }
skill_exchange_core = { path = "../../shared_packages/skill_exchange_core" }
social_enhancements = { path = "../../shared_packages/social_enhancements" }
wallet = { path = "../../shared_packages/wallet", package = "cpc_wallet" }
notification_core = { path = "../../shared_packages/notification_core" }
social_integration = { path = "../../shared_packages/social_integration" }
cpay_core = { path = "../../shared_packages/cpay_core" }
common_utils = { path = "../../shared_packages/common_utils" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }