[package]
name = "art"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
bevy = { workspace = true }
ffmpeg-next = "6.0" # For AV1/WebP support
sled = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rayon = "1.7"

# CPC shared packages
collaboration_engine = { path = "../../shared_packages/collaboration_engine" }
media = { path = "../../shared_packages/media" }
common_utils = { path = "../../shared_packages/common_utils" }
rendering_core = { path = "../../shared_packages/rendering_core" }
opengl_renderer = { path = "../../shared_packages/opengl_renderer" }
vulkan_renderer = { path = "../../shared_packages/vulkan_renderer" }

# For testing
tempfile = "3.0"