[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9.0"
prost = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
cpc_auth = { path = "../../packages/cpc_auth" }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9.0"