[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "7.0"
async-graphql-axum = "7.0"
cpc-core = { path = "../../packages/cpc-core" }
rmp-serde = "1.1"
jsonwebtoken = "9.0"
once_cell = "1.19"
tracing = "0.1"
rand = "0.8"
sha2 = "0.10"
merkle-cbt = "0.3"
aes-gcm = "0.10"
chrono = "0.4"
mime_guess = "2.0"