[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "7.0"
async-graphql-axum = "7.0"
cpc-core = { path = "../../packages/cpc-core" }
cpc-lib = { path = "../../packages/cpc-net" }
cpc-protos = { path = "../../packages/cpc-protos" }
rmp-serde = "1.1"
jsonwebtoken = "9.0"
once_cell = "1.19"
tracing = "0.1"
rand = "0.8"
sha2 = "0.10"
merkle-cbt = "0.3"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
tonic = "0.10"
prost = "0.12"
image = "0.24"
bytes = "1.5"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
blake3 = "1.5"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio-stream = "0.1"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.10"