[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Technologies
axum = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
pdf = { workspace = true }

# GraphQL for Public API
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# gRPC for Internal API
tonic = { workspace = true }
prost = { workspace = true }

// Local packages
cpc-core = { path = "../../packages/cpc-core", features = ["finance", "health", "invoicing"] }
cpc-net = { path = "../../packages/cpc-net" }
cpc-protos = { path = "../../packages/cpc-protos" }
cpc-website-builder = { path = "../website-builder" }
cpc-music-player = { path = "../music-player" }
cpc-health = { path = "../../packages/cpc-core/health" }

# Common dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-stream = { workspace = true }
rust_decimal = { workspace = true }
futures-util = { workspace = true }
semver = "1.0"

[build-dependencies]
tonic-build = "0.11"