[package]
name = "cpc-bi-analytics"
version = "0.1.0"
edition = "2021"
authors = ["CPC Cooperative <coop@cpc.dev>"]
description = "Business Intelligence & Analytics module for CPC platform"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
base64 = "0.21"

# CPC core dependencies
common_utils = { path = "../../shared_packages/common_utils" }

# Database dependencies
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# P2P dependencies
# p2panda = { workspace = true }

# Visualization dependencies
bevy = { workspace = true, optional = true, features = [
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_image",
] }
plotters = { workspace = true, optional = true }
image = { version = "0.24", optional = true }

# GraphQL dependencies
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }

# WebSocket dependencies
tokio-tungstenite = { workspace = true, optional = true }
axum = { workspace = true, features = ["ws"], optional = true }

# gRPC dependencies
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# Sled for edge caching
sled = { workspace = true }

# Test dependencies
wasm-bindgen-test = { version = "0.3", optional = true }

[features]
default = []
web = ["async-graphql", "async-graphql-axum", "axum", "tokio-tungstenite"]
bevy-ui = ["bevy", "image"]
visualization = ["plotters", "bevy-ui"]
grpc = ["tonic", "prost"]

[lib]
crate-type = ["rlib"]