[package]
name = "cpc-core-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# For p2p synchronization
# p2panda = { workspace = true }

# For database integration
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# For GraphQL API
async-graphql = { workspace = true }

[dev-dependencies]
# For testing
tokio = { workspace = true, features = ["full"] }