[package]
name = "community_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
social_graph = { path = "../../shared_packages/social_graph" }
consent_manager = { path = "../../shared_packages/consent_manager" }
async-graphql = "4.0"
ffmpeg-wasm = { version = "0.13.1", features = ["av1", "opus"] }
yew = "0.21"
tauri = "2.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }