[package]
name = "community_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
social_graph = { path = "../../shared_packages/social_graph" }
consent_manager = { path = "../../shared_packages/consent_manager" }
async-graphql = { workspace = true }
yew = { workspace = true }
tauri = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }