[package]
name = "community_impact_dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Community Impact Dashboard Team"]
description = "A community-owned platform for measuring, visualizing, and celebrating collective impact"
license = "CPC"
repository = ""
documentation = ""

[dependencies]
# Tracing for logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework (if needed for API)
axum = { version = "0.7", optional = true }

# Database (if needed)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }

# Configuration
config = { version = "0.13", optional = true }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[features]
default = []
api = ["axum"]
database = ["sqlx", "config"]

[[bin]]
name = "community_impact_dashboard"
path = "src/main.rs"

[lib]
name = "community_impact_dashboard_lib"
path = "src/lib.rs"
