[package]
name = "cpc-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Technologies
sqlx = { workspace = true }
tracing = { workspace = true }

# gRPC for Internal API
tonic = { workspace = true }
prost = { workspace = true }

# Local packages
cpc-core = { path = "../../packages/cpc-core" }
cpc-protos = { path = "../../packages/cpc-protos" }

# Common dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }