[package]
name = "cpc-crm"
version = "0.1.0"
edition = "2021"
authors = ["CPC Cooperative <coop@cpc.dev>"]
description = "Customer Relationship Management module for CPC platform"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
async-trait = { workspace = true }


# Database dependencies
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
db_pool = { path = "../../shared_packages/db_pool" }
db_abstraction = { path = "../../shared_packages/db_abstraction" }

# P2P dependencies
p2panda = { workspace = true }

# Web dependencies
axum = { workspace = true, optional = true }
async-graphql = { workspace = true, optional = true }

# Bevy dependencies
bevy = { workspace = true, optional = true }

# Yew dependencies
yew = { workspace = true, optional = true }

# Test dependencies
wasm-bindgen-test = { version = "0.3", optional = true }
gloo-utils = { version = "0.2", optional = true }

[features]
default = []
web = ["axum", "async-graphql"]
bevy-ui = ["bevy"]
yew-ui = ["yew"]
test-yew = ["yew-ui", "wasm-bindgen-test", "gloo-utils"]

[lib]
crate-type = ["rlib"]