[package]
name = "cpc-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["CPC Cooperative <coop@cpc.dev>"]
description = "Dashboard application for CPC platform"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# GraphQL support
async-graphql = "4.0"
async-graphql-axum = "4.0"

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.0"
base64 = "0.21"

# Caching support
sled = "0.34"
sha2 = "0.10"

# CPC modules
visualization_context = { path = "../../packages/visualization_context" }

# Web framework
yew = { version = "0.21.0", features = ["csr"] }

# JSON handling
serde_json = "1.0"

# Testing
wasm-bindgen-test = "0.3"

[features]
default = []
test-yew = ["wasm-bindgen-test"]